--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>my second repo.</title>
 </head>
 <body>
-    
+    <h1>i can create github</h1>
+    <p>this is my github</p>
 </body>
 </html>
